--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <header></header>
         <main>
             <p>Hello World!</p>
+            <img src="/img/lamelo_ejected.jpg">
         </main>
         <footer></footer>
     </body>
