added byron page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <body>
         <header></header>
         <main>
-            <p>Hello World!</p>
-            <img src="/img/lamelo_ejected.jpg">
+            <p>Doug Branson Codes</p>
+            <a href="byron.html">Byron Mullens Appreciation Page</a>
         </main>
         <footer></footer>
     </body>
