--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <main>
             <p>Doug Branson Codes</p>
             <a href="byron.html">Byron Mullens Appreciation Page</a>
+            <a href="techdoc.html">An Example Technical Document</a>
         </main>
         <footer></footer>
     </body>
