--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,10 @@
                 <div class="spacer-right"></div>
             </div>
         </div>
-        <div class="hero-img"></div>
+        <div class="hero-img-container"> <div class="hero-img"></div></div>
+        <div class="grid-1">
+            <div class="item" id="byron"></div>
+            <div class="item" id="techdoc"></div>
+        </div>
     </body>
 </html>
