--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
                 <div class="spacer-right"></div>
             </div>
         </div>
-        <div class="hero-img"></div>
+        <div class="hero-img-container"> <div class="hero-img"></div></div>
     </body>
 </html>
