--- a/projects.html
+++ b/projects.html
@@ -18,10 +18,12 @@
                 <div class="spacer-right"></div>
             </div>
         </div>
-        <div class="hero-img-container"> <div class="hero-img"></div></div>
-        <div class="grid-1">
-            <div class="item" id="byron"></div>
-            <div class="item" id="techdoc"></div>
+        <div class="hero-img-container"> 
+            <div class="hero-img"></div>
         </div>
+        <div class="project-content">
+            <a href="byron.html"><img class="project" src="img/byron.png"></a>
+            <a href="techdoc.html"><img class="project" src="img/techdoc.png"></a>
+        </div>       
     </body>
 </html>
