--- a/index.html
+++ b/index.html
@@ -2,22 +2,17 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;600&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Doug Branson's coding projects" />
         <title>Doug Branson Codes</title>
     </head>
     <body>
-        <div class="container">
-            <div class="flex-container">
-                <div class="spacer-left"></div>
-                <div class="navbar">
-                    <a href="index.html">Home</a>
-                    <a href="projects.html">Projects</a>
-                </div>
-                <div class="spacer-right"></div>
-            </div>
-        </div>
-        <div class="hero-img-container"> <div class="hero-img"></div></div>
+        <h1>Doug Branson</h1>
+        <p><a href="projects.html">Projects</a></p>
+        <p><a href="about.html">About</a></p>
     </body>
 </html>
