--- a/projects.html
+++ b/projects.html
@@ -8,22 +8,7 @@
         <title>Doug Branson Codes</title>
     </head>
     <body>
-        <div class="container">
-            <div class="flex-container">
-                <div class="spacer-left"></div>
-                <div class="navbar">
-                    <a href="index.html">Home</a>
-                    <a href="projects.html">Projects</a>
-                </div>
-                <div class="spacer-right"></div>
-            </div>
-        </div>
-        <div class="hero-img-container"> 
-            <div class="hero-img"></div>
-        </div>
-        <div class="project-content">
-            <a href="byron.html"><img class="project" src="img/byron.png"></a>
-            <a href="techdoc.html"><img class="project" src="img/techdoc.png"></a>
-        </div>       
+        <p>Home</p>
+        <p>About</p>          
     </body>
 </html>
