--- a/projects.html
+++ b/projects.html
@@ -2,13 +2,20 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;600&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Doug Branson's coding projects" />
         <title>Doug Branson Codes</title>
     </head>
     <body>
-        <p>Home</p>
-        <p>About</p>          
+        <h1>Doug Branson Codes</h1>
+        <p><a href="index.html">Home</a></p>
+        <p>About</p>
+        <p>Byron Mullens</p>
+        <p>Technical Document</p> 
+        <p>Stangin' or Clangin'</p>           
     </body>
 </html>
