--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <head>
         <link rel="stylesheet" href="styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;600&display=swap" rel="stylesheet"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;600&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Doug Branson's coding projects" />
         <title>Doug Branson Codes</title>
     </head>
     <body>
-        <h1>Doug Branson</h1>
+        <h1>Doug Branson Codes</h1>
         <p><a href="projects.html">Projects</a></p>
         <p><a href="about.html">About</a></p>
     </body>
