--- a/projects.html
+++ b/projects.html
@@ -13,9 +13,9 @@
     <body>
         <h1>Doug Branson Codes</h1>
         <p><a href="index.html">Home</a></p>
-        <p>About</p>
-        <p>Byron Mullens</p>
-        <p>Technical Document</p> 
-        <p>Stangin' or Clangin'</p>           
+        <p><a href="about.html">About</a></p>
+        <p><a href="byron.html">Byron Mullens</a></p>
+        <p><a href="techdoc.html">Technical Document</a></p>
+        <p><a href="stangin.html">Stangin' or Clangin'</a></p>          
     </body>
 </html>
