added about page

--- a/about.html
+++ b/about.html
@@ -12,7 +12,8 @@
     </head>
     <body>
         <h1>Doug Branson Codes</h1>
-        <p><a href="about.html">About</a></p>
+        <p><a href="index.html">Home</a></p>
         <p><a href="projects.html">Projects</a></p>
+        <p>I'm a podcast and video producer who is learning to code. You've found my space to share projects and practice coding techniques.</p>
     </body>
 </html>
