--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
         <p><a href="about.html">About</a></p>
         <p><a href="byron.html">Byron Mullens</a></p>
         <p><a href="techdoc.html">Technical Document</a></p>
-        <p><a href="stangin.html">Stangin' or Clangin'</a></p>          
+        <p><a href="stangin.html">Stangin' or Clangin'</a></p>
+        <p><a href="landing">Landing Page</a></p>           
     </body>
 </html>
