--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
+        <script src="/quotes.js"> </script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;600&display=swap" rel="stylesheet"> 
@@ -14,5 +15,10 @@
         <h1>Doug Branson Codes</h1>
         <p><a href="about.html">About</a></p>
         <p><a href="projects.html">Projects</a></p>
+        <div class="quote-container">
+            <p id="quotes"></p>
+            <p id="author"></p>
+            <button id="generate"></button>
+        </div>
     </body>
 </html>
