added chatbot link

--- a/stangin.html
+++ b/stangin.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="styles-stangin.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;300;600&display=swap" rel="stylesheet"> 
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Doug Branson's coding projects" />
-        <title>Doug Branson Codes</title>
+        <title>Stangin? or Clangin'?</title>
     </head>
     <body>
-        <h1>Doug Branson Codes</h1>
-        <p><a href="index.html">Home</a></p>
-        <p><a href="about.html">About</a></p>
-        <p><a href="byron.html">Byron Mullens</a></p>
-        <p><a href="techdoc.html">Technical Document</a></p>
-        <p><a href="stangin.html">Stangin' or Clangin'</a></p>
-        <p><a href="landing.html">Landing Page</a></p>    
-        <p><a href="https://dougbranson.dev/chatbot">Chat Bot</a></p>    
+        <div class="container">
+            <form action="" autocomplete="off">
+                <div id ="autocomplete-wrapper"class="autocomplete-wrapper">
+                    <input id="playerNames" type="text" placeholder="Player Name">
+                </div>
+                <button type="submit" class="btn-submit">Submit</button>
+            </form>
+        </div>
+    <script src="stangin-search.js"></script>
     </body>
 </html>
