added personal pages

--- a/projects.html
+++ b/projects.html
@@ -18,5 +18,9 @@
         <p><a href="techdoc.html">Technical Document</a></p>
         <p><a href="stangin.html">Stangin' or Clangin'</a></p>
         <p><a href="landing.html">Landing Page</a></p>    
+        <p><a href="poems.html">Poems</a></p>    
+        <p><a href="music.html">Music</a></p>    
+        <p><a href="photos.html">Photos</a></p>    
+        <p><a href="Contact.html">Contact</a></p>    
     </body>
 </html>
