--- a/poems.html
+++ b/poems.html
@@ -11,6 +11,43 @@
         <title>Doug Branson's poems</title>
     </head>
     <body>
+<!--an article with two sections side by side the left side is an image, the right side is a title, include css styling-->
+        <div class="container">
+            <div class="poem-block">
+                <div class="poem-img">
+                    <img src="images/untitled.jpg" alt="untitled">
+                </div>
+                <div class="poem-text">
+                    <h1>I remember sneaking away from Captain Planet</h1>
+                </div>
+            </div>
+            <div class="poem-block">
+                <div class="poem-img">
+                    <img src="images/untitled.jpg" alt="untitled">
+                </div>
+                <div class="poem-text">
+                    <h1>Front Porch Adagio</h1>
+                </div>
+            </div>
+            <div class="poem-block">
+                <div class="poem-img">
+                    <img src="images/untitled.jpg" alt="untitled">
+                </div>
+                <div class="poem-text">
+                    <h1>Untitled</h1>
+                </div>
+            </div>
+            <div class="poem-block">
+                <div class="poem-img">
+                    <img src="images/untitled.jpg" alt="untitled">
+                </div>
+                <div class="poem-text">
+                    <h1>Untitled</h1>
+                </div>
+            </div>
+        
+            
+
 
     </body>
 </html>
