poems! poems! poems!

--- a/poems.html
+++ b/poems.html
@@ -11,43 +11,184 @@
         <title>Doug Branson's poems</title>
     </head>
     <body>
+<!--simple top nav bar with three links to Home, About and Projects. The links should be centered on the page-->
+        <nav class="top-nav">
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/projects.html">Projects</a></li>
+            </ul>
+        </nav>
 <!--an article with two sections side by side the left side is an image, the right side is a title, include css styling-->
-        <div class="container">
-            <div class="poem-block">
-                <div class="poem-img">
-                    <img src="images/untitled.jpg" alt="untitled">
-                </div>
-                <div class="poem-text">
-                    <h1>I remember sneaking away from Captain Planet</h1>
-                </div>
-            </div>
-            <div class="poem-block">
-                <div class="poem-img">
-                    <img src="images/untitled.jpg" alt="untitled">
-                </div>
-                <div class="poem-text">
-                    <h1>Front Porch Adagio</h1>
-                </div>
-            </div>
-            <div class="poem-block">
-                <div class="poem-img">
-                    <img src="images/untitled.jpg" alt="untitled">
-                </div>
-                <div class="poem-text">
-                    <h1>Untitled</h1>
-                </div>
-            </div>
-            <div class="poem-block">
-                <div class="poem-img">
-                    <img src="images/untitled.jpg" alt="untitled">
-                </div>
-                <div class="poem-text">
-                    <h1>Untitled</h1>
-                </div>
-            </div>
-        
-            
-
-
+        <div class="poem-container">
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">9/14/21</p>
+                    <h1><a href="/poems/captain_planet">I remember sneaking away from Captain Planet</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">7/30/21</p>
+                    <h1><a href="/poems/captain_planet">Front Porch Adagio</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">7/22/21</p>
+                    <h1><a href="/poems/captain_planet">Front Porch Symphony</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">6/18/21</p>
+                    <h1><a href="/poems/captain_planet">Hello world.</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">5/30/21</p>
+                    <h1><a href="/poems/captain_planet">Today We Found About You</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">5/26/21</p>
+                    <h1><a href="/poems/captain_planet">All the thoughts I don't think about</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">5/25/21</p>
+                    <h1><a href="/poems/captain_planet">An ode to unshining stars</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">4/24/21</p>
+                    <h1><a href="/poems/captain_planet">In the belly, surrounded by the beast</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">4/24/21</p>
+                    <h1><a href="/poems/captain_planet">Come On Down</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">9/10/20</p>
+                    <h1><a href="/poems/captain_planet">Orange</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">7/24/20</p>
+                    <h1><a href="/poems/captain_planet">A Cosmic Accounting</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">4/2/20</p>
+                    <h1><a href="/poems/captain_planet">Silent</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">9/29/19</p>
+                    <h1><a href="/poems/captain_planet">Superman</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+            <article class="poem-block">
+                <section class="poem-img">
+                    <a href="poems/captain_planet">
+                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    </a>
+                </section>
+                <section class="poem-meta">
+                    <p class="poem-date">8/4/19</p>
+                    <h1><a href="/poems/captain_planet">i.o.u</a></h1>
+                    <a href="/poems/captain_planet">Read More</a>
+                </section>
+            </article>
+        </div>
     </body>
 </html>
