--- a/poems.html
+++ b/poems.html
@@ -20,7 +20,7 @@
             </ul>
         </nav>
 <!--an article with two sections side by side the left side is an image, the right side is a title, include css styling-->
-        <div class="poem-container">
+        <div class="poetry-container">
             <article class="poem-block">
                 <section class="poem-img">
                     <a href="poems/captain_planet">
@@ -29,164 +29,177 @@
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">9/14/21</p>
-                    <h1><a href="/poems/captain_planet">I remember sneaking away from Captain Planet</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/captain-planet.html">I remember sneaking away from Captain Planet</a></h1>
+                    <a href="/poems/captain-planet.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/front-porch-adagio.html">
+                        <img src="img/front-porch-adagio.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">7/30/21</p>
-                    <h1><a href="/poems/captain_planet">Front Porch Adagio</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/front-porch-adagio.html">Front Porch Adagio</a></h1>
+                    <a href="/poems/front-porch-adagio.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/front-porch-symphony.html">
+                        <img src="img/front-porch-symphony.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">7/22/21</p>
-                    <h1><a href="/poems/captain_planet">Front Porch Symphony</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/front-porch-symphony.html">Front Porch Symphony</a></h1>
+                    <a href="/poems/front-porch-symphony.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/hello-world.html">
+                        <img src="img/hello-world.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">6/18/21</p>
-                    <h1><a href="/poems/captain_planet">Hello world.</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/hello-world.html">Hello world.</a></h1>
+                    <a href="/poems/hello-world.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/today-we-found-out.html">
+                        <img src="img/today-we-found-out.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">5/30/21</p>
-                    <h1><a href="/poems/captain_planet">Today We Found About You</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/today-we-found-out.html">Today We Found About You</a></h1>
+                    <a href="/poems/today-we-found-out.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/all-the-thoughts.html">
+                        <img src="img/all-the-thoughts.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">5/26/21</p>
-                    <h1><a href="/poems/captain_planet">All the thoughts I don't think about</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/all-the-thoughts.html">All the thoughts I don't think about</a></h1>
+                    <a href="/poems/all-the-thoughts.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/unshining-stars.html">
+                        <img src="img/unshining-stars.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">5/25/21</p>
-                    <h1><a href="/poems/captain_planet">An ode to unshining stars</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/unshining-stars.html">An ode to unshining stars</a></h1>
+                    <a href="/poems/unshining-stars.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/in-the-belly.html">
+                        <img src="img/in-the-belly.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">4/24/21</p>
-                    <h1><a href="/poems/captain_planet">In the belly, surrounded by the beast</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/in-the-belly.html">In the belly, surrounded by the beast</a></h1>
+                    <a href="/poems/in-the-belly.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/come-on-down.html">
+                        <img src="img/come-on-down.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">4/24/21</p>
-                    <h1><a href="/poems/captain_planet">Come On Down</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/come-on-down.html">Come On Down</a></h1>
+                    <a href="/poems/come-on-down.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/orange.html">
+                        <img src="img/orange.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">9/10/20</p>
-                    <h1><a href="/poems/captain_planet">Orange</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/orange.html">Orange</a></h1>
+                    <a href="/poems/orange.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/cosmic-accounting.html">
+                        <img src="img/cosmic-accounting.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">7/24/20</p>
-                    <h1><a href="/poems/captain_planet">A Cosmic Accounting</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/cosmic-accounting.html">A Cosmic Accounting</a></h1>
+                    <a href="/poems/cosmic-accounting.html">Read More</a>
                 </section>
             </article>
+            
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/silent.html">
+                        <img src="img/silent.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">4/2/20</p>
-                    <h1><a href="/poems/captain_planet">Silent</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/silent.html">Silent</a></h1>
+                    <a href="/poems/silent.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/superman.html">
+                        <img src="img/superman.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">9/29/19</p>
-                    <h1><a href="/poems/captain_planet">Superman</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/superman.html">Superman</a></h1>
+                    <a href="/poems/superman.html">Read More</a>
                 </section>
             </article>
+
             <article class="poem-block">
                 <section class="poem-img">
-                    <a href="poems/captain_planet">
-                        <img src="img/captain_planet.png" alt="boy watching a captain planet like cartoon">
+                    <a href="poems/iou.html">
+                        <img src="img/iou.png" alt="boy watching a captain planet like cartoon">
                     </a>
                 </section>
                 <section class="poem-meta">
                     <p class="poem-date">8/4/19</p>
-                    <h1><a href="/poems/captain_planet">i.o.u</a></h1>
-                    <a href="/poems/captain_planet">Read More</a>
+                    <h1><a href="/poems/iou.html">i.o.u</a></h1>
+                    <a href="/poems/iou.html">Read More</a>
                 </section>
             </article>
         </div>
