--- a/poems/captain-planet.html
+++ b/poems/captain-planet.html
@@ -17,10 +17,11 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/about">About</a></li>
                 <li><a href="/projects.html">Projects</a></li>
+                <li><a href="/poems.html">Poems</a></li>
             </ul>
         </nav>
-        <div>
-        <h1>I remember sneaking away from Captain Planet</h1>
+        <div class="poem-container">
+        <h1 class="poem-title">I remember sneaking away from Captain Planet</h1>
         <p>
             I remember sneaking away,
 			            <br/>
@@ -77,6 +78,5 @@
                         <br/>
 		</p>
         </div>
-
     </body>
 </html>
